--- a/style.css
+++ b/style.css
@@ -5,10 +5,9 @@ body {
 }
 
 main {
-    background-color: #fff;
+    background-color: #ffffff;
     width: 100vw;
     height: 100vh;
-    /* margin: 0 auto; */
     border-radius: 0 0 0 15%;
 }
 
@@ -45,7 +44,7 @@ nav {
 }
 
 .introduce {
-    color: #172B4D;
+    color: #172b4d;
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -86,8 +85,6 @@ nav {
 
 .works {
     display: grid;
-    /* grid-template-rows: repeat(4, 1fr);
-    grid-template-columns: repeat(1fr); */
     margin-top: 150px;
     gap: 50px;
     padding-left: 16px;
@@ -210,7 +207,7 @@ nav {
 }
 
 .my-resume:hover {
-    color: #fff;
+    color: #ffffff;
     cursor: pointer;
     background-color: #6070ff;
 }
