--- a/style.css
+++ b/style.css
@@ -357,3 +357,68 @@ nav {
   cursor: pointer;
   background-color: #6070ff;
 }
+
+@media (min-width: 768px) and (max-width: 2560px) {
+  body {
+    background-color: white; 
+  }
+  
+  header {
+    padding-top: 16px;
+    display: flex;
+    justify-content: space-between;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    background-color: #fff;
+  }
+  
+  .firstpageSection {
+    background-image: url(Assets/Header\ bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    object-fit: cover;
+    width: 100%;
+    height: 970px;
+    border: 1px;
+    border-radius: 0 0 0 15%;
+    background-color: #fff;
+  }
+
+  .hero {
+    /* width: 920px;
+    height: 268px; */
+    margin-left: 260px;
+    gap: 12px;
+    margin-top: 289px;
+  }
+  
+  .introduce {
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 60px;
+    letter-spacing: 0.37px;
+    width: 920px;
+    color: #091e42;
+    margin-bottom: 15px;
+  }
+
+  .greeting {
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 28px;
+    color: #344563;
+    margin-top: 40px;
+  }
+
+  .mediaIcons {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 16px;
+    list-style-type: none;
+    margin-left: 128px;
+  }
+}
